--- a/order-release.yml
+++ b/order-release.yml
@@ -1,18 +1,11 @@
 server:
-  port: 8765
+  port: 8762
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-spring:
-  application:
-    name: config
-  env: relase
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/GitMiaoXiang/springcloud-config.git
-          username: 14796635306@163.com
-          default-label: master
-          password: 5306..peng
+
+#自定义负载均衡器
+PRODUCT:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
