--- a/order-dev.yml
+++ b/order-dev.yml
@@ -6,8 +6,9 @@ server:
 PRODUCT:
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
-#这段配置不能加载配置中心
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+spring: 
+  rabbitmq:
+    host: 192.168.43.119
+    port: 5672
+    username: root
+    password: sa
