--- a/geteway-dev.yml
+++ b/geteway-dev.yml
@@ -8,10 +8,10 @@ PRODUCT:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
 spring: 
   rabbitmq:
-    host: 192.168.124.128
+    host: 192.168.5.8
     port: 5672
-    username: root
-    password: sa
+    username: guest
+    password: guest
 management:
   endpoints:
     web:
