--- a/order-dev.yml
+++ b/order-dev.yml
@@ -10,5 +10,5 @@ spring:
   rabbitmq:
     host: 192.168.5.8
     port: 5672
-    username: root
-    password: sa
+    username: guest
+    password: guest
